--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "author": "astapi",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:fix": "yarn lint --fix",
     "precommit": "npm run lint",
     "test": "jest"
   },
@@ -18,13 +19,13 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.8.0",
     "express": "^4.16.4",
-    "nuxt": "^2.4.0",
+    "nuxt": "^2.6.3",
     "@types/babel-core": "6.25.6",
     "@types/eslint": "^4.16.6",
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/express": "^4.16.1",
     "@types/prettier": "^1.16.3",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/eslint-plugin": "^1.7.0"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.6.3",
