--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "src/*"
+        "./*"
+      ],
+      "~/*": [
+        "./*"
       ]
     },
     "types": [
@@ -27,11 +30,11 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "./**/*.ts",
+    "./**/*.tsx",
+    "./**/*.vue",
+    "test/**/*.ts",
+    "test/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
