--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@types/express": "^4.16.1",
     "@types/prettier": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "cookie-parser": "^1.4.4",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "element-ui": "2.7.2",
     "express": "^4.16.4",
+    "js-cookie": "^2.2.0",
     "nuxt": "^2.6.3"
   },
   "devDependencies": {
