--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
   ],
   "rules": {
     "nuxt/no-cjs-in-config": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error"
   }
 }
