--- a/package.json
+++ b/package.json
@@ -18,30 +18,32 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.3.0",
+    "bulma": "^0.7.4",
+    "cookie-parser": "^1.4.4",
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
+    "date-fns": "^1.30.1",
+    "express": "^4.16.4",
+    "js-cookie": "^2.2.0",
+    "nuxt": "^2.6.3",
+    "firebase": "^5.11.0",
+    "tiptap": "^1.17.0",
+    "tiptap-extensions": "^1.17.0"
+  },
+  "devDependencies": {
+    "@nuxt/typescript": "^2.6.3",
+    "@nuxtjs/eslint-config": "^0.0.1",
+    "@types/node-sass": "^4.11.0",
     "@types/babel-core": "6.25.6",
     "@types/eslint": "^4.16.6",
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/express": "^4.16.1",
     "@types/prettier": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "cookie-parser": "^1.4.4",
-    "cross-env": "^5.2.0",
-    "dotenv": "^8.0.0",
-    "element-ui": "2.7.2",
-    "express": "^4.16.4",
-    "js-cookie": "^2.2.0",
-    "nuxt": "^2.6.3"
-  },
-  "devDependencies": {
-    "@nuxt/typescript": "^2.6.3",
-    "@nuxtjs/eslint-config": "^0.0.1",
-    "@types/node-sass": "^4.11.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
-    "bulma": "^0.7.4",
-    "date-fns": "^1.30.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": ">=12.0.0",
@@ -54,7 +56,6 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "firebase": "^5.11.0",
     "jest": "^24.1.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
@@ -62,8 +63,6 @@
     "nuxt-user-agent": "^1.2.1",
     "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
-    "tiptap": "^1.17.0",
-    "tiptap-extensions": "^1.17.0",
     "ts-node": "^8.1.0",
     "vue-jest": "^3.0.3",
     "vue-property-decorator": "^8.1.0"
