--- a/package.json
+++ b/package.json
@@ -19,25 +19,27 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.3.0",
     "bulma": "^0.7.4",
+    "cloudinary-core": "^2.6.3",
     "cookie-parser": "^1.4.4",
     "cross-env": "^5.2.0",
-    "dotenv": "^8.0.0",
     "date-fns": "^1.30.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "firebase": "^5.11.0",
     "js-cookie": "^2.2.0",
     "nuxt": "^2.6.3",
-    "firebase": "^5.11.0",
+    "nuxt-property-decorator": "^2.3.0",
     "tiptap": "^1.17.0",
     "tiptap-extensions": "^1.17.0"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.6.3",
     "@nuxtjs/eslint-config": "^0.0.1",
-    "@types/node-sass": "^4.11.0",
     "@types/babel-core": "6.25.6",
     "@types/eslint": "^4.16.6",
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/express": "^4.16.1",
+    "@types/node-sass": "^4.11.0",
     "@types/prettier": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@vue/test-utils": "^1.0.0-beta.27",
