--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,4 +17,5 @@ jobs:
     - name: deoloy to heroku
       env:
         HEROKU_APP: astapi-dev-blog
-      run: git push https://heroku:${{ HEROKU_API_KEY }}@git.heroku.com/${{ HEROKU_APP }}.git master
+        HEROKU_API_KEY: ${{ HEROKU_API_KEY }}
+      run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/${{ HEROKU_APP }}.git master
