--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,5 +17,5 @@ jobs:
     - name: deoloy to heroku
       env:
         HEROKU_APP: astapi-dev-blog
-        HEROKU_API_KEY: ${{ HEROKU_API_KEY }}
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/${{ HEROKU_APP }}.git master
