--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,4 +18,4 @@ jobs:
       env:
         HEROKU_APP: astapi-dev-blog
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/${{ HEROKU_APP }}.git master
+      run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP.git master
