--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     # - uses: actions/checkout@v1
     - name: install git
-      run: apt-get install git
+      run: sudo apt-get install -y git
     - name: deoloy to heroku
       env:
         HEROKU_APP: astapi-dev-blog
