--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    # - uses: actions/checkout@v1
+    - uses: actions/checkout@v1
     - name: install git
       run: sudo apt-get install -y git
     - name: deoloy to heroku
