--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,8 +12,10 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: install git
-      run: sudo apt-get install -y git
+    #- name: install git
+    #  run: sudo apt-get install -y git
+    - name: git branch
+      run: git branch -a
     - name: deoloy to heroku
       env:
         HEROKU_APP: astapi-dev-blog
