--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,10 +14,10 @@ jobs:
     - uses: actions/checkout@v1
     #- name: install git
     #  run: sudo apt-get install -y git
-    - name: git branch
-      run: git branch -a
+    - name: git switch
+      run: git switch -c master
     - name: deoloy to heroku
       env:
         HEROKU_APP: astapi-dev-blog
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP.git origin/master
+      run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP.git master
