--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "astapi",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "nuxt-ts",
+    "build": "nuxt-ts build",
+    "start": "nuxt-ts start",
+    "generate": "nuxt-ts generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:fix": "yarn lint --fix",
     "precommit": "npm run lint",
@@ -16,6 +16,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@nuxt/typescript-runtime": "^0.1.7",
     "@nuxtjs/dotenv": "^1.3.0",
     "bulma": "^0.7.4",
     "cloudinary-core": "^2.6.3",
@@ -26,14 +27,15 @@
     "express": "^4.16.4",
     "firebase": "^5.11.0",
     "js-cookie": "^2.2.0",
-    "nuxt": "^2.8.1",
+    "nuxt": "^2.9.2",
     "nuxt-property-decorator": "^2.3.0",
     "tiptap": "^1.17.0",
     "tiptap-extensions": "^1.17.0"
   },
   "devDependencies": {
-    "@nuxt/typescript": "^2.6.3",
+    "@nuxt/typescript-build": "^0.2.10",
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@nuxtjs/tailwindcss": "^1.1.2",
     "@types/babel-core": "6.25.6",
     "@types/eslint": "^4.16.6",
     "@types/eslint-plugin-prettier": "^2.2.0",
