--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "firebase": "^7.0.0",
+    "highlight.js": "^9.15.10",
     "js-cookie": "^2.2.0",
     "nuxt": "^2.9.2",
     "nuxt-property-decorator": "^2.3.0",
