--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.1.7",
     "@nuxtjs/dotenv": "^1.3.0",
+    "@nuxtjs/google-analytics": "^2.2.0",
     "bulma": "^0.7.4",
     "cloudinary-core": "^2.6.3",
     "cookie-parser": "^1.4.4",
