--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "firebase": "^7.0.0",
+    "firebase-admin": "^8.7.0",
     "highlight.js": "^9.15.10",
+    "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.0",
     "nuxt": "^2.9.2",
     "nuxt-property-decorator": "^2.3.0",
+    "sharp": "^0.23.2",
     "tiptap": "^1.17.0",
-    "tiptap-extensions": "^1.17.0"
+    "tiptap-extensions": "^1.17.0",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.2.10",
